--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-plotly
-sqlalchemy
-psycopg2-binary
+streamlit==1.13.0
+pandas==1.4.2
+plotly==5.10.0
+sqlalchemy==1.4.41
+psycopg2-binary==2.9.5
